@@ -11,6 +11,16 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-05
+2011-03-31 Andy Salnikov
+- renamed "dimensions" attribute into "shape"
+- implemented support for "shape_method" attribute in XmlReared
+- default shape_method name changed to use accessor name (if defined)
+- added "variable" property to Type meaning that instances can have
+  different size (true for CsPad::Element types)
+- generation of _sizeof and member access methods now understand 
+  variable types
+
 Tag: V00-00-04
 2011-03-30 Andy Salnikov
 - adding support for the unknown-size types in pds2psana backend:
